# dsop-api-spesifikasjoner

./: .flake8  .gitignore  .~lock.Endepunkt for produksjonsmiljø Kontrollinformasjon_v.2.ods#  Makefile  README.md  TODO.md  banker.csv  banker_02.csv  banker_03.csv  banker_04.csv  banker_05.csv  mypy.ini  noxfile.py  pyproject.toml
01_extract_organizations/: 937888104_enhetsregisteret.json  937889186_enhetsregisteret.json  937889631_enhetsregisteret.json  937891334_enhetsregisteret.json  937895321_enhetsregisteret.json  937901003_enhetsregisteret.json  944521836_enhetsregisteret.json  952706365_enhetsregisteret.json  984851006_enhetsregisteret.json  README.md  extractOrganizations.py
02_transform/: README.md  transform.py
03_load_publishers/: DNB_984851006_Publisher.json  README.md  Sparebank1_837884942_Enhetsregisteret.json  Sparebank1_837884942_Publisher.json  TODO.md  loadPublishers.py
extract_organizations/: 837884942_enhetsregisteret.json  920426530_enhetsregisteret.json  937888015_enhetsregisteret.json  937889275_enhetsregisteret.json  937899408_enhetsregisteret.json  937899785_enhetsregisteret.json
publishers/: DNB_984851006_Enhetsregisteret.json  README.md
script/: generateSpecification.py
specs/: Aasen_Sparebank_937903502_Accounts-API.json  Accounts API openapi v1.0.0-RC2.yaml  Afjord_Sparebank_937902441_Accounts-API.json  Agder_Sparebank_937894260_Accounts-API.json  Andebu_Sparebank_937890540_Accounts-API.json  Arendal_og_Omegns_Sparekasse_937894082_Accounts-API.json  Askim_og_Spydeberg_Sparebank_937885199_Accounts-API.json  Aurskog_Sparebank_937885644_Accounts-API.json  BN_Bank_914864445_Accounts-API.json  BRAbank_ASA_913460715_Accounts-API.json  BRAbank_ASA_986144706_Accounts-API.json  Bank2_ASA_988257133_Accounts-API.json  Bank_Norwegian_AS_991455671_Accounts-API.json  Berg_Sparebank_937885288_Accounts-API.json  Bien_Sparebank_ASA_991853995_Accounts-API.json  Birkenes_Sparebank_937893833_Accounts-API.json  Bjugn_Sparebank_937902085_Accounts-API.json  Blaker_Sparebank_837886252_Accounts-API.json  Bluestep_Bank_AB_Filial_Oslo_995268841_Accounts-API.json  Brage_Finans_AS_995610760_Accounts-API.json  DNB_984851006_Accounts-API.json  DNB_API-catalog.ttl  DNB_Accounts-API.yaml  Danske_Bank_977074010_Accounts-API.json  Drangedal_og_Tordal_Sparebank_937891601_Accounts-API.json  (+127 more)
tests/: __init__.py  test_catalog.py  (+1 more)
(+44 files in other folders)
