[tool.poetry]
name = "dsop-api-spesifikasjoner"
version = "0.1.0"
description = "A collection of openAPI specifications for the DSOP-banks."
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PyYAML = "^6.0"
click = "^8.1.3"
jsonpickle = "^2.2.0"
rdflib = "^6.3.2"
oastodcat = "^2.0.2"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
mypy = "^0.982"
pytype = {version = "^2022.10.13", python = "3.9"}
flake8-annotations = "^2.9.1"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.10.25"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
darglint = "^1.8.1"
flake8-assertive = "^2.1.0"
pytest-cov = "^4.0.0"
deepdiff = "^6.2.1"
pytest-mock = "^3.10.0"

[tool.poetry.scripts]
dsop_api_spesifikasjoner = "dsop_api_spesifikasjoner.generateSpecification:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["dsop_api_spesifikasjoner"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
